--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,5 +1,4 @@
-div {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
+@import './reset.css';
+@import './modules/header.css';
+@import './modules/main.css';
+@import './modules/footer.css';
