--- a/assets/styles/modules/header.css
+++ b/assets/styles/modules/header.css
@@ -1,12 +1,8 @@
 header {
     width: 100%;
-    height: 300px;
-    background: radial-gradient(circle at -1% 57.5%, rgb(17, 168, 79) 0%, rgb(0, 102, 43) 90%);
-    padding: 20px 0;
+    height: 100px;
+    background: radial-gradient(circle at -1% 57.5%, rgb(9, 88, 42) 0%, rgb(0, 45, 19) 90%);
+    position: fixed;
+    z-index: 2;
     box-shadow: 3px -7px 40px 0px rgb(0, 0, 0);
-}
-
-.headerLogo {
-    width: 200px;
-    height: 200px;
 }
