--- a/assets/styles/modules/header.css
+++ b/assets/styles/modules/header.css
@@ -1,8 +1,25 @@
 header {
     width: 100%;
-    height: 100px;
+    height: 84px;
     background: radial-gradient(circle at -1% 57.5%, rgb(9, 88, 42) 0%, rgb(0, 45, 19) 90%);
+    padding: 12px 0;
+    box-sizing: border-box;
     position: fixed;
     z-index: 2;
     box-shadow: 3px -7px 40px 0px rgb(0, 0, 0);
 }
+
+header .left {
+    width: 40%;
+    height: 100%;
+    background-color: red;
+    justify-content: left;
+}
+
+header .right {
+    width: 60%;
+    height: 100%;
+    background-color: yellow;
+    justify-content: right;
+}
+
