--- a/assets/styles/modules/carousel.css
+++ b/assets/styles/modules/carousel.css
@@ -2,18 +2,26 @@
     margin: 0;
     padding: 0;
 }
+.carousel-container {
+    width: 100%;
+    height: 100%;
+}
+
 .carousel_items {
     display: flex;
-    wrap: nowrap;
+    flex-wrap: nowrap;
     overflow: hidden;
+    width: 100%;
+    height: 100%;
 }
 .carousel_item {
     position: relative;
     min-width: 100%;
-    height: 100vh;
+    height: 100%;
     transition: all 0.5s linear;
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     background-attachment: fixed;
 }
 .carousel_text {
@@ -30,17 +38,17 @@
     font-weight: bolder;
 }
 .item1 {
-    background-image: url("https://images.unsplash.com/photo-1426604966848-d7adac402bff?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80");
+    background-image: url(../../images/Carousel_items/P1.jpg);
 }
 .item2 {
-    background-image: url("https://images.unsplash.com/photo-1501862700950-18382cd41497?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=519&q=80");
+    background-image: url(../../images/Carousel_items/P2.jpg);
 }
 .item3 {
-    background-image: url("https://images.unsplash.com/photo-1536697246787-1f7ae568d89a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzR8fHNwYWNlfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60");
+    background-image: url(../../images/Carousel_items/P3.jpg);
 }
 .item4 {
-    background-image: url("https://images.unsplash.com/photo-1620712943543-bcc4688e7485?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OHx8QUl8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60");
+    background-image: url(../../images/Carousel_items/P4.jpg);
 }
 .item5 {
-    background-image: url("https://images.unsplash.com/photo-1673901736622-c3f06b08511f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=874&q=80");
+    background-image: url(../../images/Carousel_items/P5.jpg);
 }
