DOCS: working on Header (right)

--- a/assets/styles/modules/carousel.css
+++ b/assets/styles/modules/carousel.css
@@ -39,6 +39,8 @@
 }
 .item1 {
     background-image: url(../../images/Carousel_items/P1.jpg);
+    background-position: bottom; /* პირველი ფოტო ყუთით, ქვემოდან დაჭირდა პოზიცია */
+
 }
 .item2 {
     background-image: url(../../images/Carousel_items/P2.jpg);
