--- a/assets/styles/modules/header.css
+++ b/assets/styles/modules/header.css
@@ -7,19 +7,36 @@ header {
     position: fixed;
     z-index: 2;
     box-shadow: 3px -7px 40px 0px rgb(0, 0, 0);
+    color: #fff;
 }
 
 header .left {
     width: 40%;
     height: 100%;
-    background-color: red;
+    /* background-color: red; */
     justify-content: left;
 }
 
 header .right {
     width: 60%;
     height: 100%;
-    background-color: yellow;
+    /* background-color: black; */
     justify-content: right;
 }
 
+/* ნავიგაცია START*/
+
+.nav__item {
+    display: inline-block;
+    margin-left: 32px;
+}
+
+.nav__link {
+    text-decoration: none;
+    font-style: normal;
+    /* font-family: TWSAjaraTVMt-Bold, sans-serif; */
+    /* text-transform: uppercase; */
+    color: inherit;
+}
+
+/* ნავიგაცია END*/
