DOCS: minor carousel scss change

--- a/assets/styles/modules/_general.scss
+++ b/assets/styles/modules/_general.scss
@@ -14,7 +14,7 @@ header, main, footer {
 
 .delete {
     height: 500px;
-    background-color: red;
+    background-color: yellow;
 }
 
 .display_flex {
