DOCS: updated carousel structure

--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -1,10 +1,10 @@
 // Reset CSS
 
-@import './reset';
+@import './general/reset';
 
 // General styles
 
-@import './modules/general';
+@import './general/general';
 
 // Variables
 
