--- a/assets/styles/general/_general.scss
+++ b/assets/styles/general/_general.scss
@@ -1,6 +1,7 @@
-header, main, footer {
+header, main, footer, section {
     display: flex;
     justify-content: center;
+    height: 500px;
 }
 .container {
     width: 80%;
@@ -10,11 +11,6 @@ header, main, footer {
 .logo {
     width: 50px;
     height: 50px;
-}
-
-.delete {
-    height: 500px;
-    background-color: yellow;
 }
 
 .display_flex {
