--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -53,9 +53,10 @@ table {
   border-spacing: 0;
 }
 
-header, main, footer {
+header, main, footer, section {
   display: flex;
   justify-content: center;
+  height: 500px;
 }
 
 .container {
@@ -66,11 +67,6 @@ header, main, footer {
 .logo {
   width: 50px;
   height: 50px;
-}
-
-.delete {
-  height: 500px;
-  background-color: yellow;
 }
 
 .display_flex {
@@ -93,13 +89,11 @@ header, main, footer {
 .header .left {
   width: 40%;
   height: 100%;
-  /* background-color: red; */
   justify-content: left;
 }
 .header .right {
   width: 60%;
   height: 100%;
-  /* background-color: black; */
   justify-content: right;
   /* ნავიგაცია START*/
   /* ნავიგაცია END*/
@@ -117,13 +111,8 @@ header, main, footer {
 }
 
 main {
-  height: 500px;
-  /* background: radial-gradient(circle at 18.7% 37.8%, hsl(0, 0%, 98%) 0%, rgb(225, 234, 238) 90%); */
   padding-top: 84px;
-  /* background-image: url(../../images/main_bachground.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: bottom; */
+  /* background: radial-gradient(circle at 18.7% 37.8%, hsl(0, 0%, 98%) 0%, rgb(225, 234, 238) 90%); */
 }
 
 * {
