--- a/assets/styles/general/_general.scss
+++ b/assets/styles/general/_general.scss
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Georgian:wght@100..900&display=swap');
+
+html {
+    font-family: 'Noto Sans Georgian';
+}
+
 header, main, footer, section {
     display: flex;
     justify-content: center;
