--- a/assets/styles/modules/_header.scss
+++ b/assets/styles/modules/_header.scss
@@ -10,28 +10,41 @@
     color: #fff;
 
     .left {
-        width: 40%;
+        width: 35%;
         height: 100%;
         justify-content: left;
+        background-color: brown;
     }
 
     .right {
-        width: 60%;
+        width: 65%;
         height: 100%;
+        background-color: yellow;
         justify-content: right;
 
+        nav {
+            display: flex;
+            align-items: center;
+            background-color: red;
+        }
     /* ნავიგაცია START*/
-    .nav__item {
-        display: inline-block;
-        margin-left: 32px;
+        .nav__item {
+            display: inline-block;
+            // margin-left: 32px;
         }
 
-    .nav__link {
-        text-decoration: none;
-        font-style: normal;
-        /* font-family: TWSAjaraTVMt-Bold, sans-serif; */
-        /* text-transform: uppercase; */
-        color: inherit;
+        .nav__link {
+            text-decoration: none;
+            font-style: normal;
+            /* font-family: TWSAjaraTVMt-Bold, sans-serif; */
+            /* text-transform: uppercase; */
+            color: inherit;
+        }
+
+        .language_change {
+            width: 20px;
+            height: 20px;
+            // padding-left: 10px;
         }
     /* ნავიგაცია END*/
     }
