--- a/assets/styles/modules/_main.scss
+++ b/assets/styles/modules/_main.scss
@@ -1,4 +1,5 @@
 main {
     padding-top: 84px;
+    height: 600px;
         /* background: radial-gradient(circle at 18.7% 37.8%, hsl(0, 0%, 98%) 0%, rgb(225, 234, 238) 90%); */
 }
