--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -70,8 +70,8 @@ header, main, footer, section {
 }
 
 .logo {
-  width: 50px;
-  height: 50px;
+  width: 70px;
+  height: 70px;
 }
 
 .display_flex {
@@ -95,12 +95,13 @@ header, main, footer, section {
   width: 35%;
   height: 100%;
   justify-content: left;
-  background-color: brown;
+}
+.header .display_flex .logo {
+  margin-bottom: 9px;
 }
 .header .right {
   width: 65%;
   height: 100%;
-  background-color: yellow;
   justify-content: right;
   /* ნავიგაცია START*/
   /* ნავიგაცია END*/
@@ -108,25 +109,29 @@ header, main, footer, section {
 .header .right nav {
   display: flex;
   align-items: center;
-  background-color: red;
 }
 .header .right .nav__item {
   display: inline-block;
+  margin-left: 15px;
 }
 .header .right .nav__link {
   text-decoration: none;
   font-style: normal;
-  /* font-family: TWSAjaraTVMt-Bold, sans-serif; */
-  /* text-transform: uppercase; */
   color: inherit;
 }
-.header .right .language_change {
+.header .right .language {
+  margin-left: 20px;
   width: 20px;
   height: 20px;
+}
+.header .right .language_change {
+  width: 100%;
+  height: 100%;
 }
 
 main {
   padding-top: 84px;
+  height: 600px;
   /* background: radial-gradient(circle at 18.7% 37.8%, hsl(0, 0%, 98%) 0%, rgb(225, 234, 238) 90%); */
 }
 
@@ -155,31 +160,35 @@ main {
   background-size: cover;
   background-position: center;
 }
-.carousel-container .carousel_items .carousel_text {
+.carousel-container .carousel_items .text_location {
+  flex-direction: column;
+  align-items: end;
   position: absolute;
+  width: 500px;
+  height: 60px;
   bottom: 10%;
-  left: 50%;
-  transform: translate(-50%);
+  left: 80%;
+  transform: translate(-70%);
   padding: 0.5rem 1rem;
   border-radius: 3px;
-  background-color: #000;
+}
+.carousel-container .carousel_items .text_location .carousel_text {
   color: white;
-  text-shadow: 1px 1px black;
+  text-shadow: 2px 2px black;
   font-size: calc(1.5rem + 0.3vw);
   font-weight: bolder;
 }
 .carousel-container .carousel_items .item1 {
-  background-image: url(../images/Carousel_items/P2.jpg);
+  background-image: url(../images/Carousel_items/P1.jpg);
 }
 .carousel-container .carousel_items .item2 {
-  background-image: url(../images/Carousel_items/P1.jpg);
-  background-position: bottom; /* პირველი ფოტო ყუთით, ქვემოდან დაჭირდა პოზიცია */
+  background-image: url(../images/Carousel_items/P22.jpg);
 }
 .carousel-container .carousel_items .item3 {
-  background-image: url(../images/Carousel_items/P3.jpg);
+  background-image: url(../images/Carousel_items/P23.jpg);
 }
 .carousel-container .carousel_items .item4 {
-  background-image: url(../images/Carousel_items/P4.jpg);
+  background-image: url(../images/Carousel_items/P24.jpg);
 }
 
 footer {
