--- a/assets/styles/modules/_carousel.scss
+++ b/assets/styles/modules/_carousel.scss
@@ -44,8 +44,14 @@
                 font-size: calc(1.5rem + 0.3vw);
                 font-weight: bolder;
             }
-        }
 
+            .txt2 {
+                margin-top: 8px;
+                text-shadow: 1px 1px black;
+                font-size: calc(1rem + 0.2vw);
+                // font-weight: normal;
+            }
+        }
         .item1 {
             background-image: url(../images/Carousel_items/P1.jpg);
         }
