DOCS: About section Done

--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -14,6 +14,10 @@
 @import './modules/header';
 @import './modules/main';
 @import './modules/carousel';
+@import './modules/about';
+@import './modules/activity';
+// @import './modules/gallery';
+// @import './modules/partners';
 @import './modules/footer';
 
 // Animations
