--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -61,7 +61,7 @@ html {
 header, main, footer, section {
   display: flex;
   justify-content: center;
-  height: 500px;
+  height: 400px;
 }
 
 .container {
@@ -132,7 +132,6 @@ header, main, footer, section {
 main {
   padding-top: 84px;
   height: 600px;
-  /* background: radial-gradient(circle at 18.7% 37.8%, hsl(0, 0%, 98%) 0%, rgb(225, 234, 238) 90%); */
 }
 
 * {
@@ -194,6 +193,58 @@ main {
 }
 .carousel-container .carousel_items .item4 {
   background-image: url(../images/Carousel_items/P24.jpg);
+}
+
+.about {
+  height: 350px;
+  background: radial-gradient(circle at 18.7% 37.8%, hsl(0, 0%, 98%) 0%, rgb(225, 234, 238) 90%);
+}
+.about .container {
+  box-sizing: border-box;
+  flex-direction: column;
+}
+.about .container .main_text {
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+}
+.about .container .main_text .main_tex_left {
+  width: 80%;
+  height: 100%;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: start;
+}
+.about .container .main_text .main_tex_left h2 {
+  font-size: calc(1.5rem + 0.3vw);
+}
+.about .container .main_text .main_tex_left p {
+  text-align: justify;
+  padding-bottom: 25px;
+  line-height: 18px;
+}
+.about .container .main_text .main_tex_right {
+  width: 20%;
+  height: 100%;
+}
+.about .container .main_text .main_tex_right .logo_big {
+  width: 250px;
+}
+
+.activity .container .activity_left {
+  width: 33%;
+  height: 100%;
+  background-color: yellowgreen;
+}
+.activity .container .activity_center {
+  width: 34%;
+  height: 100%;
+  background-color: burlywood;
+}
+.activity .container .activity_right {
+  width: 33%;
+  height: 100%;
+  background-color: aqua;
 }
 
 footer {
