--- a/assets/styles/modules/_footer.scss
+++ b/assets/styles/modules/_footer.scss
@@ -1,5 +1,8 @@
 footer {
-    height: 100px;
+    box-sizing: border-box;
+    height: 200px;
+    padding:30px 0px;
+    text-align:center;
     background: linear-gradient(to right, #242424 0%, black 100%);
 
     .container {
@@ -11,12 +14,28 @@ footer {
             width: 100%;
             height: 60%;
             background-color: rgb(40 48 43);
+            margin:1% 0%;
+            padding:0.6% 0%;
+
+            a {
+                text-decoration:none;
+
+                .social_icon_settings {
+                    width: 30px;
+                }
+            }
         }
 
         .lower {
             width: 100%;
             height: 20%;
             background-color: red;
+
+            a {
+                .social_icon_settings {
+                    width: 30px;
+                }
+            }
         }
     }
 }
