DOCS: added gallery and partners section DRAFT

--- a/assets/styles/modules/_about.scss
+++ b/assets/styles/modules/_about.scss
@@ -34,7 +34,7 @@
                 height: 100%;
 
                 .logo_big {
-                    width: 250px;
+                    width: 100%;
                 }
             }
 
