--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -16,8 +16,8 @@
 @import './modules/carousel';
 @import './modules/about';
 @import './modules/activity';
-// @import './modules/gallery';
-// @import './modules/partners';
+@import './modules/gallery';
+@import './modules/partners';
 @import './modules/footer';
 
 // Animations
